# telco-gum

./: README.md  gum-32.vcxproj  gum-32.vcxproj.filters  gum-64.vcxproj  gum-64.vcxproj.filters  gum-common.props  meson.build  meson_options.txt
.github/env/: bootstrap.sh
.github/workflows/: ci.yml
bindings/gumjs/: generate-bindings.py  generate-runtime.py  gumcmodule.c  gumcmodule.h  guminspectorserver.c  gumjs-32.vcxproj  gumjs-32.vcxproj.filters  gumjs-64.vcxproj  gumjs-64.vcxproj.filters  gumjs-common.props  gumjs-inspector.vcxproj  gumquickcmodule.c  gumquickcompile.vcxproj  gumquickcore.c  gumquickscript.c  gumv8cmodule.cpp  gumv8core.cpp  gumv8script.cpp  gumv8scriptbackend.cpp  meson.build
bindings/gumpp/: gumpp-common.props  gumpp-static.filters  gumpp-static.vcxproj  gumpp.vcxproj  meson.build
docs/: config.toml
gum/: gum.c  gumcloak.c  gumdarwingrafter.c  gumdefs.h  gumprintf.c  meson.build
gum/backend-arm64/: guminterceptor-arm64.c  gumstalker-arm64.c
gum/backend-darwin/: gumcodesegment-darwin.c  gumdarwinmapper.c  gumdarwinsymbolicator.c
gum/backend-linux/: gumandroid.c
subprojects/: capstone.wrap  elfutils.wrap  glib.wrap  json-glib.wrap  libdwarf.wrap  libffi.wrap  libsoup.wrap  libunwind.wrap  quickjs.wrap  sqlite.wrap  tinycc.wrap  xz.wrap
tests/: gum-tests.plist  gum-tests.vcxproj  gum-tests.xcent  gumtest.c  run-android.sh  run-ios.sh  run-linux-x86_64.sh  run-macos.sh  run-mapper-ios.sh  sign.sh  testutil.c
tests/core/: interceptor.c  mapper.c
vapi/: meson.build  telco-gum-1.0.vapi  telco-gum-heap-1.0.vapi
(+14 files in other folders)
